<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>403</width>
    <height>325</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTextEdit" name="txInput"/>
   </item>
   <item>
    <widget class="QPushButton" name="btnTrans">
     <property name="text">
      <string>翻译</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QTextEdit" name="txOutput"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
